* `onyx pkg new` for creating a project from a template

Removals:

Changes:
* Undefined function imports in `onyx run` no longer cause an immediate error.
    - Instead, an error is produced when the function is called.
* API for time remains the same, but reduced dependencies on external time things,
    like strftime, localtime and mktime.
* Ergnomic improvements to `onyx pkg`.

Bugfixes:
* Fixed missing `use core` in `optional.onyx`.
    - Fixes `Optional.reset` and `Optional.hash`
* Fixed missing newline in `onyx help build` documentation.
* Fixed WASI compilation due to misconfigured environment code.
* Fixed WASI `__dir_open` permissions.
* Fixed `core.encoding.ini` clearing the temporary allocator.



Release v0.1.0
--------------
This release contains MANY CHANGES because I am terrible at keeping up to date with a
proper changelog and release schedule. Basically, this is the first release where I
feel like the language is at a good place. Many "gotcha" bugs have been resolved and
the language is much more powerful now for it. There are still plenty of things that
are going to be changed and added in the future, but first I want to get this better
version out there in a packaged format.

Additions:
* Multi-threading for the JS backend (--use-multi-threading)
* Running Onyx directly from the compiler using 'onyx run'
    - This internally links with libwasmer to provide the WASM runtime.
* threading primitives (mutex, semaphore, etc.)
* atomic intrinsics
* Quick-Functions
* do-expressions
* typeof
* interfaces and where clauses
* '#auto' return type
* Macros and paste-able code blocks
* overloaded procedures can have polymorphic and overloaded procedures as overloads.  This makes them MUCH more powerful.
* types are not required on struct members that have default values. This is still very experimental so there are some
    noticable bugs with it. You can always specify the type explicitly if you have issues.